syntax = "proto2";
import "common.proto";

message QuestionAndAnswer {
    required string question = 1;
    required string answer = 2;
}

message Response {
    required string post_id = 1;
    required string email = 2;
    required Gender gender = 3;
    repeated QuestionAndAnswer questionAndAnswers = 4;   
    required int32 age = 5;
    required string location = 6;
}